--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -89,6 +89,10 @@
 			<section class="works" data-columns></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine obras favoritas</div>
+			<a class="upload-work" href="/{{ user.username }}/work/add">
+				<i class="fa fa-cloud-upload"></i>
+				<p>Sube tu primera obra</p>
+			</a>
 		</div>
 		<div class="profile__element">
 			<section class="products no-filters"></section>
