--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -80,10 +80,12 @@
 			  <ul class="dropdown-menu dropdown-menu-right">
 			    <li><a href="/{{ user.username }}">Hans Evangelista</a></li>
 			    <li role="separator" class="divider"></li>
-			    <li><a href="/{{ user.username }}/portfolio">Portafolio</a></li>
+			    <!-- <li><a href="/{{ user.username }}/portfolio">Portafolio</a></li>
 			    <li><a href="/{{ user.username }}/store">Tienda</a></li>
 			    <li><a href="/{{ user.username }}/collections">Colecciones</a></li>
-			    <li><a href="/{{ user.username }}/likes/works">Likes</a></li>
+			    <li><a href="/{{ user.username }}/likes/works">Likes</a></li> -->
+			    <li><a href="/{{ user.username }}/work/add">Subir Obra</a></li>
+			    <li><a href="#">Vender Producto</a></li>
 			    <li role="separator" class="divider"></li>
 			    <li><a href="/{{ user.username }}/cart">Carrito <i class="fa fa-shopping-cart"></i></a></li>
 			    <li><a href="#">Pedidos</a></li>
