--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -35,9 +35,9 @@
 					<div class="price">s./{{product.price}}</div>
 
 					<div class="users">
+						<img src="/img/artists/artist4.jpg">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+						<img src="/img/artists/artist3.jpg">
 					</div>
 
 					<div class="like">
