--- a/public/src/stylus/add-work.styl
+++ b/public/src/stylus/add-work.styl
@@ -8,7 +8,7 @@
 
 
 .add-work
-	max-width max-width
+	max-width (max-width/1.25)
 	margin auto
 	&__title
 		font-family 'Oswald'
@@ -25,6 +25,7 @@
 			font-family 'Roboto Condensed'
 			color #444
 			letter-spacing .75px
+			font-size: 1.15rem;
 		.input
 			margin .25rem 0
 		.checkbox-list
@@ -32,7 +33,8 @@
 
 .work-data
 	&__input
-		padding .5rem
+		// padding .5rem
+		padding 1rem .5rem
 		.error-title
 		.error-description
 		.error-categorys
@@ -113,7 +115,11 @@
 	font-family 'Raleway'
 	font-size .8rem
 	label
-		padding-right .5rem
+		padding-right 1rem
+		font-weight: 400;
+		padding-left .25rem
+	input
+		margin-top: -5px;
 
 
 // .checkbox-list
@@ -131,3 +137,16 @@
 // 			background #eee
 // 		span
 // 			padding-left .25rem
+
+
+.checkbox-inline
+	align-items: center;
+	padding: 0.25rem;
+	font-family: 'Raleway';
+	cursor: pointer;
+	font-size: 0.8rem;
+	letter-spacing: 1px;
+	padding-left .5rem
+	input
+		// display none
+		margin-left: -15px !important;
