--- a/public/src/stylus/base.styl
+++ b/public/src/stylus/base.styl
@@ -33,6 +33,8 @@ body
 	min-height 100%
 	display flex
 	flex-direction column
+	&__header
+		border-bottom: 1px solid #eee;
 	&__content
 		flex 1
 	&__content.gray
