--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -33,10 +33,10 @@
 		<div class="square-menu-container">
 			<div class="square-menu">
 
-				<div class="square-menu__item" selected="true">Portafolio <small>{{data[0]}}</small></div>
-				<div class="square-menu__item" selected="false">Tienda <small>{{data[1]}}</small></div>
-				<div class="square-menu__item" selected="false">Obras favoritas <small>{{data[2]}}</small></div>
-				<div class="square-menu__item" selected="false">Productos favoritos <small>{{data[3]}}</small></div>
+				<div class="square-menu__item" selected="true">Portafolio <!-- <small>{{data[0]}}</small> --></div>
+				<div class="square-menu__item" selected="false">Tienda <!-- <small>{{data[1]}}</small> --></div>
+				<!-- <div class="square-menu__item" selected="false">Obras favoritas</div> -->
+				<!-- <div class="square-menu__item" selected="false">Productos favoritos</div> -->
 
 				<!-- <div class="dropdown">
 				  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -65,12 +65,11 @@
 					    <li><a href="#">Separated link</a></li>
 					  </ul>
 					</div>
-
 				</div> -->
 
-				<div class="square-menu__item" selected="false">Colecciones <small>{{data[4]}}</small></div>
-				<div class="square-menu__item" selected="false">Seguidores <small>{{data[5]}}</small></div>
-				<div class="square-menu__item" selected="false">Siguiendo <small>{{data[6]}}</small></div>
+				<div class="square-menu__item" selected="false">Colecciones <!-- <small>{{data[4]}}</small> --></div>
+				<div class="square-menu__item" selected="false">Seguidores <!-- <small>{{data[5]}}</small> --></div>
+				<div class="square-menu__item" selected="false">Siguiendo <!-- <small>{{data[6]}}</small> --></div>
 			</div>
 		</div>
 	</div>
@@ -85,7 +84,7 @@
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine productos</div>
 		</div>
-		<div class="profile__element">
+		<!-- <div class="profile__element">
 			<section class="works" data-columns></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine obras favoritas</div>
@@ -98,7 +97,7 @@
 			<section class="products no-filters"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tiene productos favoritos</div>
-		</div>
+		</div> -->
 		<div class="profile__element">
 			<section class="collections"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
