--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -75,12 +75,12 @@
 				<div class="work-data__input">
 					<p class="title">Titulo</p>
 					<input class="input" name="title" placeholder="Titulo, de 4 a 8 palabras es bueno" type="text">
-					<p class="error-title">error-title</p>
+					<p class="error-title">Ingrese un titulo</p>
 				</div>
 				<div class="work-data__input">
 					<p class="title">Manifiesto</p>
 					<textarea name="description" class="input description" style="resize:none" placeholder="Descipcion, hagalo en 140 caracteres" rows="4"></textarea>
-					<p class="error-description">error-description</p>
+					<p class="error-description">Ingrese una descripcion</p>
 				</div>
 				<div class="work-data__input">
 					<p class="title">Categorias</p>
@@ -98,12 +98,12 @@
 						</li>
 						{% endfor %}
 					</ul> -->
-					<p class="error-categorys">error-categorys</p>
+					<p class="error-categorys">Al menos una categoria</p>
 				</div>
 				<div class="work-data__input">
 					<p class="title">Tags</p>
 					<textarea name="tags" class="input" style="resize:none" placeholder="Tags, separados por comas"></textarea>
-					<p class="error-tags">error-tags</p>
+					<p class="error-tags">Al menos un tag</p>
 				</div>
 				<div class="work-data__input">
 					<p class="title">Publico?</p>
@@ -111,7 +111,7 @@
 						<input type="radio" name="public" value="true" id="radio1"><label for="radio1">Yes</label>
 						<input type="radio" name="public" value="false" id="radio2"><label for="radio2">No</label>
 					</ul>
-					<p class="error-public">error-public</p>
+					<p class="error-public">Seleccione una opcion</p>
 				</div>
 			</form>
 		</div>
