--- a/public/src/stylus/account.styl
+++ b/public/src/stylus/account.styl
@@ -27,7 +27,7 @@
 	&__menu
 		padding-top 3.25rem
 		position absolute
-		// display none
+		display none
 		.filter
 			margin 1rem
 			border solid 1px #ddd
@@ -42,4 +42,23 @@
 				display none
 	.account
 		&__menu
+			display block
 			position initial
+
+
+.Profile
+	// padding 1rem
+	.checkbox
+		margin-left: 1rem;
+	.Profile-section
+		// margin 1rem
+		margin 1.5rem
+		// background blue
+	.Profile-section-title
+		color: #585858;
+		font-weight: 600;
+		font-size: 0.85rem;
+		letter-spacing: 1px;
+		font-family: 'Raleway';
+		text-transform: uppercase;
+		// min-width: 9rem;
