--- a/public/src/stylus/elements/buttons.styl
+++ b/public/src/stylus/elements/buttons.styl
@@ -72,6 +72,8 @@
 	border 1px solid #bbb
 	text-transform uppercase
 	font-family 'Roboto Condensed'
+	&:hover
+		background-color: #fff59d;
 	&__action
 		// padding .5em .75em
 		padding .5em
@@ -105,6 +107,9 @@
 				display none
 			&.cancel
 				display table-cell
+
+.button-liner.disabled:hover
+		background-color: white;
 
 
 /*------------------------------------*
