--- a/public/src/stylus/shipping.styl
+++ b/public/src/stylus/shipping.styl
@@ -6,6 +6,15 @@
 @import 'elements/inputs.styl'
 @import 'elements/buttons.styl'
 
+.title
+	font-family: 'Oswald';
+	font-size: 1.5rem;
+	color: #585858;
+	letter-spacing: 1px;
+	padding: 0 1rem;
+	padding-top: 2rem;
+	margin: auto;
+	display: table;
 
 .addresses
 	border solid 1px #ddd
@@ -40,6 +49,14 @@
 	border none
 	border-top solid 1px #ddd
 	display none
+	label
+		font-weight: 400;
+	input
+		// font-weight: 300;
+		// letter-spacing: 1px;
+		font-family: Arial;
+		font-size: .9rem !important;
+		color: #777;
 
 .button-solid
 	margin auto
