--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -721,6 +721,9 @@ body {
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
 }
+.button-liner:hover {
+  background-color: #fff59d;
+}
 .button-liner__action {
   padding: 0.5em;
   display: table-cell;
@@ -758,6 +761,9 @@ body {
 }
 .button-liner.disabled:hover .button-liner__action.cancel {
   display: table-cell;
+}
+.button-liner.disabled:hover {
+  background-color: #fff;
 }
 .button-like,
 .button-wish-list {
@@ -1779,7 +1785,7 @@ body {
     width: 7rem;
   }
   .profile__avatar img {
-    border: solid 5px #ccc;
+    border: solid 3px #ccc;
   }
 }
 @media (min-width: 720px) {
