--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -30,13 +30,15 @@
 		width 100%
 		border-radius 4px
 		border 1px solid #cccccc
-		padding .5em 0 .5em 2em
+		padding .5em 2em .5em .75rem
 		color #555
 		font-size 1rem
 	> i
 		position absolute
-		top .5rem
-		left .75em
+		// top .5rem
+		top .75rem
+		// left .75em
+		right .75em
 		color gray
 	.text
 		display none
@@ -182,36 +184,36 @@
 	// 				background blue
 	// 				margin-left .5rem
 
-// .shipping-container
-// 	border solid 1px #ddd
-// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
-// 	padding 1rem
-// .shippinges
-// 	display flex
-// 	flex-wrap wrap
-// 	.shipping
-// 		flex 1
-// 		max-width 50%
-// 		padding .5rem
-// 		&-inner
-// 			padding 1rem
-// 			background #e9f3f5
-// 			font-family 'Roboto Condensed'
-// 			box-shadow 1px 1px 0 #e7e7e7
-// 			letter-spacing .5px
-// 		&-title
-// 			font-size 1.15rem
-// 			padding-bottom .5rem
-// 		&-subtitle
-// 			font-weight 300
-// 			font-size .95rem
-// 		&-buttons
-// 			display flex
-// 			justify-content flex-end
-// 			button
-// 				&:not(:first-child)
-// 					background blue
-// 					margin-left .5rem
+.shipping-container
+	border solid 1px #ddd
+	box-shadow rgba(0,0,0,0.35) 0 0 10px
+	padding 1rem
+.shippinges
+	display flex
+	flex-wrap wrap
+	.shipping
+		flex 1
+		max-width 50%
+		padding .5rem
+		&-inner
+			padding 1rem
+			background #e9f3f5
+			font-family 'Roboto Condensed'
+			box-shadow 1px 1px 0 #e7e7e7
+			letter-spacing .5px
+		&-title
+			font-size 1.15rem
+			padding-bottom .5rem
+		&-subtitle
+			font-weight 300
+			font-size .95rem
+		&-buttons
+			display flex
+			justify-content flex-end
+			button
+				&:not(:first-child)
+					background blue
+					margin-left .5rem
 
 /*------------------------------------*
 	$ CHECKBOX LIST
