--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -64,6 +64,7 @@
 					color #333
 					font-size 1rem
 					fon-weight 600
+					text-decoration: underline;
 		.more
 			margin 2rem auto
 			text-align center
