add filters to discover screen

--- a/app/styles/filters.styl
+++ b/app/styles/filters.styl
@@ -34,6 +34,7 @@
 		justify-content space-between
 		letter-spacing 2px
 		font-weight bold
+		text-transform uppercase
 		font-size 10.5px
 		cursor pointer
 		color #3b3d40
