--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -53,7 +53,7 @@
 		</div>
 	</script>
 
-	<script type="text/template" id="template-work-item">
+	<script type="text/template" id="template-work">
 		<div class="grid-item">
 			<img src="<%= photo %>">
 		</div>
